fix scroll and wrap

--- a/script/components/component-style.css
+++ b/script/components/component-style.css
@@ -18,6 +18,13 @@
   position: absolute !important;
 }
 
+.wbaseItem-value.w-col[wrap="wrap"] {
+  flex-wrap: wrap !important;
+}
+
+.wbaseItem-value.w-row[wrap="wrap"] {
+  flex-wrap: wrap !important;
+}
 .wbaseItem-value.w-col {
   display: flex;
   flex-direction: column;
@@ -25,16 +32,23 @@
   justify-content: var(--main-axis-align);
   row-gap: var(--child-space);
   column-gap: var(--run-space);
-  flex-wrap: var(--flex-wrap);
   padding: var(--padding);
 }
 
 .wbaseItem-value.w-col[scroll="true"] {
-  overflow-y: scroll;
+  overflow-y: scroll !important;
 }
 
 .wbaseItem-value.w-row[scroll="true"] {
-  overflow-x: scroll;
+  overflow-x: scroll !important;
+}
+
+.wbaseItem-value.w-col[wrap="wrap"][scroll="true"] {
+  overflow: scroll hidden !important;
+}
+
+.wbaseItem-value.w-row[wrap="wrap"][scroll="true"] {
+  overflow: hidden scroll !important;
 }
 
 :is(.wbaseItem-value.w-col, .wbaseItem-value.w-row) > .wbaseItem-value:not(.wbaseItem-value.fixed-position) {
